<?xml version="1.0"?>
<package format="3">
  <name>robot_evasor_bringup</name>
  <version>0.1.0</version>
  <description>Entry-point launch files for robot_evasor</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_evasor_description</exec_depend>
  <exec_depend>robot_evasor_gazebo</exec_depend>
  <exec_depend>robot_evasor_control</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
