<?xml version="1.0"?>
<package format="3">
  <name>robot_evasor_control</name>
  <version>0.1.0</version>
  <description>Reactive obstacle avoidance controller for evasor_bot</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>actionlib_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
