<?xml version="1.0"?>
<package format="3">
  <name>robot_evasor_gazebo</name>
  <version>0.1.0</version>
  <description>Gazebo worlds and spawners for robot_evasor</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>robot_evasor_description</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/../"/>
  </export>
</package>
